add progress and issues